[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Stages/Level.gd" type="Script" id=1]
[ext_resource path="res://Components/Tilesets/Forest/Forest.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/Character/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/Blocks/ValueBlocks/PushableBlocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/Meadow.png" type="Texture" id=5]
[ext_resource path="res://GameObjects/Tiles/TempleTile/Temple.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObjects/Tiles/ScannerTile/ScannerTile.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/Card/Card.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/CustomLabel/Label.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Fonts/Backto1982/BACKTO1982.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/Textures/ForestPanel.png" type="Texture" id=13]
[ext_resource path="res://Assets/Textures/Background_2.png" type="Texture" id=14]
[ext_resource path="res://Components/PausePanel/PausePanel.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Textures/PauseButton.png" type="Texture" id=16]
[ext_resource path="res://Assets/Fonts/source-sans-pro/SourceSansPro-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/Textures/UndoButton.png" type="Texture" id=18]
[ext_resource path="res://Assets/Fonts/Rubik/Rubik-Medium.ttf" type="DynamicFontData" id=19]

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = ExtResource( 17 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.2;
uniform float softness = 3.0;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/multiplier = 0.208
shader_param/softness = 1.005

[sub_resource type="DynamicFont" id=14]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Label2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 62, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Control/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -232, 81.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Control/Label2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Label3:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "ResultAnimation"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Label2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 62, -72 ), Vector2( 62, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Control/Label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 81.5 ), Vector2( 0, 81.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Control/Label2:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:resultAnimating")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/Label3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 4, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Level 05" type="Node"]
script = ExtResource( 1 )
colorTheme = Color( 0.462745, 0.870588, 0.0705882, 1 )
answers = {
0: "+",
1: 9,
2: null,
3: null
}
resultAnimating = true

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -10

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -376, 112 )
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="ForestTilemap" parent="." instance=ExtResource( 2 )]

[node name="Background" parent="ForestTilemap" index="0"]
tile_data = PoolIntArray( 65505, 0, 2, 65506, 0, 3, 65507, 0, 3, 65508, 0, 3, 65509, 0, 3, 65510, 0, 3, 65511, 0, 3, 65512, 0, 3, 65513, 0, 3, 65514, 0, 3, 65515, 0, 3, 65516, 0, 3, 65517, 0, 3, 65518, 0, 4, 131041, 0, 65538, 131042, 0, 65539, 131043, 0, 65539, 131044, 0, 65539, 131045, 0, 65539, 131046, 0, 65539, 131047, 0, 65539, 131048, 0, 65539, 131049, 0, 65539, 131050, 0, 65539, 131051, 0, 65539, 131052, 0, 65539, 131053, 0, 65539, 131054, 0, 65540, 196577, 0, 65538, 196578, 0, 65539, 196579, 0, 65539, 196580, 0, 65539, 196581, 0, 65539, 196582, 0, 65539, 196583, 0, 65539, 196584, 0, 65539, 196585, 0, 65539, 196586, 0, 65539, 196587, 0, 65539, 196588, 0, 65539, 196589, 0, 65539, 196590, 0, 65540, 262113, 0, 65538, 262114, 0, 65539, 262115, 0, 65539, 262116, 0, 65539, 262117, 0, 65539, 262118, 0, 65539, 262119, 0, 65539, 262120, 0, 65539, 262121, 0, 65539, 262122, 0, 65539, 262123, 0, 65539, 262124, 0, 65539, 262125, 0, 65539, 262126, 0, 65540, 327649, 0, 65538, 327650, 0, 65539, 327651, 0, 65539, 327652, 0, 65539, 327653, 0, 65539, 327654, 0, 65539, 327655, 0, 65539, 327656, 0, 65539, 327657, 0, 65539, 327658, 0, 65539, 327659, 0, 65539, 327660, 0, 65539, 327661, 0, 65539, 327662, 0, 65540, 393185, 0, 65538, 393186, 0, 65539, 393187, 0, 65539, 393188, 0, 65539, 393189, 0, 65539, 393190, 0, 65539, 393191, 0, 65539, 393192, 0, 65539, 393193, 0, 65539, 393194, 0, 65539, 393195, 0, 65539, 393196, 0, 65539, 393197, 0, 65539, 393198, 0, 65540, 458721, 0, 65538, 458722, 0, 65539, 458723, 0, 65539, 458724, 0, 65539, 458725, 0, 65539, 458726, 0, 65539, 458727, 0, 65539, 458728, 0, 65539, 458729, 0, 65539, 458730, 0, 65539, 458731, 0, 65539, 458732, 0, 65539, 458733, 0, 65539, 458734, 0, 65540, 524257, 0, 65538, 524258, 0, 65539, 524259, 0, 65539, 524260, 0, 65539, 524261, 0, 65539, 524262, 0, 65539, 524263, 0, 65539, 524264, 0, 65539, 524265, 0, 65539, 524266, 0, 65539, 524267, 0, 65539, 524268, 0, 65539, 524269, 0, 65539, 524270, 0, 65540, 589793, 0, 65538, 589794, 0, 65539, 589795, 0, 65539, 589796, 0, 65539, 589797, 0, 65539, 589798, 0, 65539, 589799, 0, 65539, 589800, 0, 65539, 589801, 0, 65539, 589802, 0, 65539, 589803, 0, 65539, 589804, 0, 65539, 589805, 0, 65539, 589806, 0, 65540, 655329, 0, 65538, 655330, 0, 65539, 655331, 0, 65539, 655332, 0, 65539, 655333, 0, 65539, 655334, 0, 65539, 655335, 0, 65539, 655336, 0, 65539, 655337, 0, 65539, 655338, 0, 65539, 655339, 0, 65539, 655340, 0, 65539, 655341, 0, 65539, 655342, 0, 65540, 720865, 0, 131074, 720866, 0, 131075, 720867, 0, 131075, 720868, 0, 131075, 720869, 0, 131075, 720870, 0, 131075, 720871, 0, 131075, 720872, 0, 131075, 720873, 0, 131075, 720874, 0, 131075, 720875, 0, 131075, 720876, 0, 131075, 720877, 0, 131075, 720878, 0, 131076 )

[node name="Blocks" parent="ForestTilemap" index="2"]
tile_data = PoolIntArray( 196579, 0, 0, 196580, 0, 0, 196581, 0, 0, 196582, 0, 0, 196583, 0, 0, 196584, 0, 0, 196585, 0, 0, 196586, 0, 0, 196587, 0, 0, 196588, 0, 0, 262115, 0, 0, 262116, 0, 0, 262120, 0, 0, 262121, 0, 0, 262122, 0, 0, 262123, 0, 0, 262124, 0, 0, 327651, 0, 0, 327659, 0, 0, 327660, 0, 0, 393187, 0, 0, 393190, 0, 0, 393196, 0, 0, 458723, 0, 0, 458731, 0, 0, 458732, 0, 0, 524259, 0, 0, 524265, 0, 0, 524266, 0, 0, 524267, 0, 0, 524268, 0, 0, 589795, 0, 0, 589796, 0, 0, 589797, 0, 0, 589798, 0, 0, 589799, 0, 0, 589800, 0, 0, 589801, 0, 0, 589802, 0, 0, 589803, 0, 0, 589804, 0, 0 )

[node name="GameObjects" type="Node2D" parent="."]

[node name="Box2" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( -424, 88 )
boxValue = 5

[node name="Box4" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( -424, 104 )
boxValue = 5

[node name="Box3" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( -424, 72 )
boxValue = 5

[node name="Box5" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( -392, 88 )
boxValue = 5

[node name="Player" parent="GameObjects" instance=ExtResource( 3 )]
position = Vector2( -440, 88 )

[node name="Temple" parent="GameObjects" instance=ExtResource( 6 )]
position = Vector2( -344, 104 )

[node name="ScannerTile3" parent="GameObjects" instance=ExtResource( 9 )]
position = Vector2( -360, 88 )
scannerID = 2

[node name="ScannerTile6" parent="GameObjects" instance=ExtResource( 9 )]
position = Vector2( -376, 88 )
scannerID = 2

[node name="ScannerTile4" parent="GameObjects" instance=ExtResource( 9 )]
position = Vector2( -328, 88 )
scannerID = 1

[node name="ScannerTile5" parent="GameObjects" instance=ExtResource( 9 )]
position = Vector2( -344, 88 )

[node name="QuestionLayer" type="CanvasLayer" parent="."]

[node name="QuestionPanel" type="NinePatchRect" parent="QuestionLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -80.0
margin_right = -192.0
margin_bottom = -16.0
texture = ExtResource( 13 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuestionLayer/QuestionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -24.0
margin_right = 95.0
margin_bottom = 24.0
alignment = 1

[node name="Digit6" parent="QuestionLayer/QuestionPanel/HBoxContainer" instance=ExtResource( 11 )]
margin_left = 16.0
margin_top = 9.0
margin_right = 42.0
margin_bottom = 38.0
text = "16"

[node name="Card" parent="QuestionLayer/QuestionPanel/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 46.0
margin_right = 82.0

[node name="Card2" parent="QuestionLayer/QuestionPanel/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 86.0
margin_right = 122.0
cardID = 1

[node name="Digit4" parent="QuestionLayer/QuestionPanel/HBoxContainer" instance=ExtResource( 11 )]
margin_left = 126.0
margin_top = 9.0
margin_right = 140.0
margin_bottom = 38.0
text = "="

[node name="Digit3" parent="QuestionLayer/QuestionPanel/HBoxContainer" instance=ExtResource( 11 )]
margin_left = 144.0
margin_top = 9.0
margin_right = 174.0
margin_bottom = 38.0
text = "25"

[node name="PausePanel" parent="." instance=ExtResource( 15 )]
visible = false

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="Control" parent="UILayer"]
anchor_right = 1.0

[node name="PauseButton" type="Button" parent="UILayer/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 64.0
flat = true

[node name="TextureRect" type="TextureRect" parent="UILayer/Buttons/PauseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
stretch_mode = 6

[node name="Label" type="Label" parent="UILayer/Buttons/PauseButton/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -22.0
margin_right = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Esc"
align = 1
valign = 1

[node name="UndoButton" type="Button" parent="UILayer/Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 8.0
margin_right = -48.0
margin_bottom = 64.0
flat = true

[node name="TextureRect2" type="TextureRect" parent="UILayer/Buttons/UndoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 18 )
stretch_mode = 6

[node name="Label" type="Label" parent="UILayer/Buttons/UndoButton/TextureRect2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -22.0
margin_right = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Undo"
align = 1
valign = 1

[node name="ResultLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect2" type="TextureRect" parent="ResultLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="ResultLayer"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="ResultLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label3" type="Label" parent="ResultLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -64.0
margin_right = 117.0
margin_bottom = -42.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Space to go to World Map..."

[node name="Label2" type="Label" parent="ResultLayer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 62.0
margin_top = -64.0
margin_right = 578.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 1 )
text = "Puzzle Complete"

[node name="Control" type="Control" parent="ResultLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -52.0
margin_right = 256.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="ResultLayer/Control/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = 81.5
margin_right = -82.0
margin_bottom = 110.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "Time Spend :"

[node name="Label2" type="Label" parent="ResultLayer/Control/Control"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -14.5
margin_right = 297.0
margin_bottom = 14.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 11 )
text = "00:00:00:000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultLayer"]
anims/RESET = SubResource( 12 )
anims/ResultAnimation = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="pressed" from="UILayer/Buttons/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="UILayer/Buttons/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="ForestTilemap"]
